--- a/tini-warp/docker-compose.yml
+++ b/tini-warp/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     restart: on-failure
 
   kong:
-    image: "kong-ubuntu:latest"
+    image: "kong-tini-warp:latest"
     user: "${KONG_USER:-kong}"
     environment:
       <<: *kong-env
